# dagster-example-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  workspace.yaml
job_configs/: hacker_news_config.yaml
src/dagster_example_pipeline/: hacker_news_job_template.py  repos.py  resources.py
tests/: test_hacker_news_job.py
