[tool.poetry]
name = "dagster-example-pipeline"
version = "1.0.0"
description = "A boilerplate for creating data pipelines using Dagster, Docker, and Poetry"
authors = ["Alex Service <aservice@miletwo.us>"]
readme = "README.md"
repository = "https://github.com/MileTwo/dagster-example-pipeline"

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.3.2"
requests = "2.26.0"
autopep8 = "1.5.7"
pyyaml = "5.4.1"
dagster = "0.14.3"

[tool.poetry.dev-dependencies]
dagit = "0.14.3"
debugpy = "^1.4.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
